--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <secton class="register-form-container">
+    <section class="mt-5 center register-form-container">
         <h1>Register</h1>
         <form id="register-form" action="./html/login.html">
             <section class="mb-3 input-section name-section">
@@ -42,7 +42,7 @@
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
 
-    </secton>
+    </section>
     <script src="./js/register.js"></script>
 </body>
 
