--- a/index.html
+++ b/index.html
@@ -39,11 +39,12 @@
                 <span class="error-email">Confirm password must be same as password</span>
 
             </section>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <span class="error-register"></span>
+            <button type="submit" id="submit" class="btn btn-primary">Submit</button>
         </form>
-
     </section>
-    <script src="./js/register.js"></script>
+    <script type="module" src="./js/register.js"></script>
+    <script type="module" src="./js/validations.js"></script>
 </body>
 
 </html>
