--- a/html/login.html
+++ b/html/login.html
@@ -27,12 +27,13 @@
 
             <span class="error-login">No such email of password</span>
 
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Login</button>
+
+
         </form>
 
         <script type="module" src="../js/login.js"></script>
         <script type="module" src="../js/auth.js"></script>
-        <!-- <script type="module" src="../js/validations.js"></script> -->
 </body>
 
 </html>
