--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 
             </section>
             <span class="error-register"></span>
-            <button type="submit" id="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" id="submit" class="btn btn-primary">Register</button>
+            <button id="hasAccount" class="btn btn-primary">Login</button>
         </form>
     </section>
     <script type="module" src="./js/register.js"></script>
