--- a/html/home.html
+++ b/html/home.html
@@ -99,10 +99,10 @@
 
     <!-- ============== Products ================== -->
 
-    <div class="row row-cols-1 row-cols-md-3 g-4 products-section">
+    <div class="row row-cols-1 row-cols-md-4 g-4 products-section">
 
     </div>
-    <script src="../js/home.js"></script>
+    <script src="../js/home.js" type="module"></script>
 </body>
 
 </html>
