--- a/html/details.html
+++ b/html/details.html
@@ -4,11 +4,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Details</title>
+    <title>Products Details</title>
+    <link rel="stylesheet" href="../css/bootstrap.css">
+    <link rel="stylesheet" href="../css/details.css">
 </head>
 
 <body>
+    <section class="row justify-content-around">
+        <section class="img col-11 col-xl-5" id="mainImg">
+            <img src="../images/add.jpeg" class="w-75" alt="">
+        </section>
+        <script src="../js/build_components.js" type="module"></script>
+
+        <section class="col-11  col-xl-5" id="details-section">
+            <div class=" h-100 w-100 card" style="width: 18rem;">
+                <div class="card-body">
+                    <h2 class="card-title">Card title</h2>
+                    <h6 class="card-subtitle mb-2 text-body-secondary rating">Card subtitle</h6>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                    <span class="price"> </span><br>
+
+                    <span class="quantity"> </span><br>
+                    <span class="category"> </span><br>
+                    <button class="w-25 mt-5 btn btn-success addToCart ">Add to Cart</button>
+                </div>
+            </div>
+
+        </section>
+    </section>
     <script type="module" src="../js/details.js"></script>
+
 </body>
 
 </html>
