--- a/html/login.html
+++ b/html/login.html
@@ -25,7 +25,7 @@
                 <input id="passwordIn" class="password form-control " type="password">
             </section>
 
-            <span class="error-login">No such email of password</span>
+            <span class="error-login">No such email or password</span>
 
             <button type="submit" class="btn btn-primary">Login</button>
 
