--- a/html/home.html
+++ b/html/home.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
     <link rel="stylesheet" href="../css/bootstrap.css">
+    <link rel="stylesheet" href="../css/build_components.css">
     <link rel="stylesheet" href="../css/home.css">
 </head>
 
