adjusting margins and adding footer to all pages

--- a/html/details.html
+++ b/html/details.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <section class="row justify-content-around">
+    <section class="mt-5 row justify-content-around ">
         <section class="img col-11 col-xl-5" id="mainImg">
             <img src="../images/add.jpeg" class="w-75" alt="">
         </section>
