--- a/html/orderShipped.html
+++ b/html/orderShipped.html
@@ -7,6 +7,7 @@
     <title>Order Shipped</title>
     <link rel="stylesheet" href="../css/bootstrap.css">
     <link rel="stylesheet" href="../css/orderShipped.css">
+    <link rel="stylesheet" href="../css/build_components.css">
 </head>
 
 
