--- a/html/home.html
+++ b/html/home.html
@@ -28,10 +28,10 @@
             </div>
             <div class="carousel-inner d-flex">
                 <div class="carousel-item active">
-                    <img src="../images/slider-1.jpeg" class="d-block w-100" alt="...">
+                    <img src="../images/1.webp" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item ">
-                    <img src="../images/slider-2.jpeg" class="d-block w-100" alt="...">
+                    <img src="../images/2.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item ">
                     <img src="../images/slider-3.jpeg" class="d-block w-100" alt="...">
