--- a/html/home.html
+++ b/html/home.html
@@ -19,22 +19,22 @@
     <section class="slider">
         <div id="carouselExampleIndicators" class="carousel slide">
             <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                <!-- <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
                     aria-current="true" aria-label="Slide 1"></button>
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
                     aria-label="Slide 2"></button>
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                    aria-label="Slide 3"></button>
+                    aria-label="Slide 3"></button> -->
             </div>
             <div class="carousel-inner d-flex">
                 <div class="carousel-item active">
-                    <img src="../images/1.webp" class="d-block w-100" alt="...">
+                    <img src="../images/1.avif" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item ">
-                    <img src="../images/2.jpg" class="d-block w-100" alt="...">
+                    <img src="../images/3.avif" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item ">
-                    <img src="../images/slider-3.jpeg" class="d-block w-100" alt="...">
+                    <img src="../images/2.avif" class="d-block w-100" alt="...">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
