restructure the filterProduct but there problems in carousel

--- a/html/home.html
+++ b/html/home.html
@@ -51,10 +51,13 @@
     </section>
 
     <!-- ================ Filter Products ============= -->
-    <ul class="list-group">
+    <form id="filter-form">
 
-    </ul>
+        <ul class="list-group">
 
+        </ul>
+
+    </form>
     <!-- ============== Products ================== -->
 
     <div class="row row-cols-1 row-cols-md-4 g-4 products-section">
