--- a/html/home.html
+++ b/html/home.html
@@ -19,12 +19,6 @@
     <section class="slider">
         <div id="carouselExampleIndicators" class="carousel slide">
             <div class="carousel-indicators">
-                <!-- <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-                    aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                    aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                    aria-label="Slide 3"></button> -->
             </div>
             <div class="carousel-inner d-flex">
                 <div class="carousel-item active">
@@ -51,19 +45,22 @@
     </section>
 
     <!-- ================ Filter Products ============= -->
-    <form id="filter-form">
+    <sectoion class="filter_prod-container d-flex flex-row">
+        <form id="filter-form" class="col-2">
 
-        <ul class="list-group">
+            <ul class="list-group class=d-flex flex-column">
 
-        </ul>
+            </ul>
 
-    </form>
-    <!-- ============== Products ================== -->
+        </form>
+        <!-- ============== Products ================== -->
 
-    <div class="row row-cols-1 row-cols-md-4 g-4 products-section">
+        <div class="row row-cols-1 row-cols-md-4 g-4 products-section">
 
-    </div>
-    <script src="../js/helper.js" type="module"></script>
+        </div>
+    </sectoion>
+    <script src=" ../js/helper.js" type="module">
+    </script>
     <script src="../js/build_components.js" type="module"></script>
     <script src="../js/home.js" type="module"></script>
 </body>
